force-app/main/default/objects/Case_Detail_Object_Mapping__mdt/Case_Detail_Object_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Case Detail Object Mapping</label>
    <pluralLabel>Case Detail Object Mappings</pluralLabel>
</CustomObject>