force-app/main/default/objects/Case_Detail_Object_Mapping__mdt/fields/Case_Detail_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Detail_Object_Name__c</fullName>
    <label>Case Detail Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>