force-app/main/default/objects/Case_Detail_Object_Mapping__mdt/fields/Case_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Type_Name__c</fullName>
    <label>Case Type Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>