force-app/main/default/objects/Case_Detail_Object_Mapping__mdt/fields/Relationship_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Field_Name__c</fullName>
    <label>Relationship Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>